<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:background="@color/blueBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-30dp"
            android:layout_marginTop="-30dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_login"
            android:rotation="14"
            app:srcCompat="@drawable/message_impossible_logo04" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/blueBackground"
        android:layout_marginTop="-30dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_greet"
            android:textColor="@color/white"
            android:padding="5dp"
            />

        <EditText
            android:id="@+id/et_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:drawableLeft="@drawable/graphic_05"
            android:drawableStart="@drawable/graphic_05"
            android:hint="@string/email_hint"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:drawableLeft="@drawable/graphic_06"
            android:drawableStart="@drawable/graphic_06"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_background"
            android:layout_margin="5dp"
            android:padding="5dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/login_button_background"
            android:textColor="@color/white"
            android:text="@string/login_text"
            android:drawableRight="@drawable/graphic_07"
            android:drawableEnd="@drawable/graphic_07"
            android:drawablePadding="-30dp"
            android:layout_margin="5dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_txt"
        android:textColor="@color/orangeMain"
        android:textSize="15sp"
        android:padding="5dp"
        tools:ignore="SmallSp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_txt"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/blueBackground"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">


        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/google_button_background"
            android:textColor="@color/white"
            android:text="@string/login_with_google_txt"
            android:drawableRight="@drawable/graphic_07"
            android:drawableEnd="@drawable/graphic_07"
            android:drawableLeft="@drawable/google_icon"
            android:drawableStart="@drawable/google_icon"
            android:drawablePadding="-30dp"
            android:layout_margin="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/facebook_button_background"
            android:textColor="@color/white"
            android:text="@string/login_with_facebook_txt"
            android:drawableRight="@drawable/graphic_07"
            android:drawableEnd="@drawable/graphic_07"
            android:drawableLeft="@drawable/facebook_icon"
            android:drawableStart="@drawable/facebook_icon"
            android:drawablePadding="-30dp"
            android:layout_margin="5dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_txt"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="5dp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here_txt"
            android:textColor="@color/orangeMain"
            android:textSize="15sp"
            android:padding="5dp"
            tools:ignore="SmallSp" />

    </LinearLayout>

</LinearLayout>