<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_listview_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_chat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:src="@mipmap/message_impossible_icon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="100dp">

            <TextView
                android:id="@+id/name_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/last_message_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkOrange"
                android:text="@string/last_message"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-95dp">


            <TextView
                android:id="@+id/last_connection_chat"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:text="@string/last_connection"
                android:textColor="@color/darkOrange" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>