<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarTop"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:weightSum="1"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"
            />

    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:weightSum="1"
        >

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabLayout"
        app:tabIndicatorColor="@color/orangeMain"
        app:tabTextColor="@color/lightGrey"
        app:tabSelectedTextColor="@color/orangeMain"
        app:tabIndicatorHeight="5dp">

        <android.support.design.widget.TabItem
            android:id="@+id/contacts_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_tab_txt" />

        <android.support.design.widget.TabItem
            android:id="@+id/chats_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats_tab_txt" />

        <android.support.design.widget.TabItem
            android:id="@+id/invites_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invites_tab_txt" />
    </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        />
</android.support.design.widget.CoordinatorLayout>